themes/bdev/assets/sass/components/_tags.scss
aside.tags {
    display: flex;
    overflow: hidden;
    margin: 2rem -2rem -2rem -2rem;
    border-top: 1px solid rgba(0, 0, 0, 0.075);
    background-color: rgb(235, 235, 235);
    padding: 1rem 2rem;
    border-bottom-right-radius: 6px;
    border-bottom-left-radius: 6px;

    h2 {
        text-transform: uppercase;
    }

    .icon {
        font-size: 2rem;
        width: 20px;
        height: 20px;
        margin-right: 1rem;
    }

    ul {
        display: flex;
        font-size: 1rem;
        margin: 0;
        list-style: none;

        li {
            margin-right: 1rem;

            a {
                text-decoration: none;
            }
        }
    }
}

